<resources>
    <string name="app_name">RemotePortalApp</string>
    <string name="placehoder_Email">Leadway Email Address</string>
    <string name="placehoder_Password">Password</string>
    <string name="title_activity_new_staff">NewStaffActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_remoteSessions">Remote Sessions</string>
    <string name="supervisor_request_list">Request List</string>
    <string name="supervisor_location">Locations</string>
    <string name="supervisor_department">Department</string>
    <string name="supervisor_canteen">Canteen</string>

    <string name="home_second">Home Second</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_out_prompt">Are you sure youwant to Sign Out</string>
    <string name="No">No</string>
    <string name="Yes">Yes</string>
    <string name="cleanlinessStateLabel">What is the cleanliness state of the location</string>
    <string name="survey_frag_title">Survey</string>
    <string name="survery_frag_subtitle">Take a survey about remote experience</string>
    <string name="powerSupplyLabel">What is the state of power supply</string>
    <string name="request_work_subtitle">Choose making a requst to remote work or joining a remote center</string>

</resources>
