<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single"
        android:visible="true"
        android:id="@+id/StaffHamburgerMenu">
        <item
            android:id="@+id/nav_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/remoteSessions"
            android:title="@string/menu_remoteSessions" />
    </group>

    <group android:checkableBehavior="single"
        android:visible="true"
        android:id="@+id/SupervisorHamburgerMenu">
        <item
            android:id="@+id/supervisorRequestListFragment"
            android:icon="@drawable/ic_request_list_icon"
            android:title="@string/supervisor_request_list" />
        <item
            android:id="@+id/supervisorLocatoinFragment"
            android:icon="@drawable/ic_home_location_icon"
            android:title="@string/supervisor_location" />
        <item
            android:id="@+id/staffCanteenFragmeent"
            android:icon="@drawable/ic_supervisor_canteen_icon"
            android:title="@string/supervisor_canteen" />
    </group>


</menu>
